<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#03A9F4"
    tools:context=".Despegable">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="399dp"
        android:layout_height="245dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <FrameLayout
            android:layout_width="400dp"
            android:layout_height="227dp"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:layout_width="311dp"
                android:layout_height="55dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="43dp"
                app:cardBackgroundColor="#A4151414">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textLugar"
                        android:layout_width="261dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/desierto_de_la_tatacota"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/ubicacion"
                        android:layout_width="261dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/tegua_travel"
                        android:textColor="#BFB8B8" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/imageLugar"
                android:layout_width="380dp"
                android:layout_height="227dp"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/image" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="165dp"
            android:layout_height="251dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/Temperatura"
                        android:layout_width="40dp"
                        android:layout_height="41dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/temperaturaalta" />

                    <TextView
                        android:id="@+id/textTemperatura"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/_30"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="40dp"
                        android:layout_height="41dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/calificaciondeestrellas"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:id="@+id/textCalificacion"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/_5"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/Ubicacion"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ubicaciónimageView7"
                        android:layout_width="40dp"
                        android:layout_height="41dp"
                        android:layout_gravity="center"
                        app:srcCompat="@android:drawable/ic_menu_mylocation"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:id="@+id/UbicaciónView"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Ubicar"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="366dp"
        android:layout_height="241dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.32">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/Descrip"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDate"
                android:layout_width="match_parent"
                android:layout_height="177dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/NeivaLugar"
                android:textColor="@color/black" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>